0.24.1/_pages/0003-maintainers.md
---
# /*
# |    Protect your secrets, protect your sensitive data.
# :    Explore VMware Secrets Manager docs at https://vsecm.com/
# </
# <>/  keep your secrets... secret
# >/
# <>/' Copyright 2023-present VMware Secrets Manager contributors.
# >/'  SPDX-License-Identifier: BSD-2-Clause
# */

title: Maintainers
layout: post
prev_url: /docs/contact/
permalink: /docs/maintainers/
next_url: /docs/security/
---

> **Hi 👋**
>
> **VMware Secrets Manager** *for Cloud-Native Apps* is maintained by
> a group of dedicated individuals [listed in the `CODEOWNERS` file][codeowners]
> on the **VMware Secrets Manager** GitHub repository.
{: .block-tip }

## Lead Architect

**Volkan Özçelik** [@v0lkan](https://github.com/v0lkan)

As the lead architect, Volkan is responsible for overall code quality,
security, architecture decisions, and major feature developments.

## Security

**Ramiro Salas** [@RamXX](https://github.com/RamXX)

Ramiro is in charge of maintaining and enhancing the security aspects of the
project.

## Core Contributors

**Abhishek Sharma** [@abhishek44sharma](https://github.com/abhishek44sharma)

Abhishek is a core contributor, working on various aspects of the project.

**Esteban Serrano** [@st96d045](https://github.com/st96d045)

Esteban is a core contributor, focusing on integrating VSecM to various
external components and hardening it for production use-cases.

**Arun Thundyill Saseendran** [@ats0stv](https://github.com/ats0stv)

Arun is a core contributor, assisting in feature development and workflow
automation.

**Farhan Pasha** [@farhan-pasha](https://github.com/farhan-pasha)

Farhan is a core contributor, actively contributing to the codebase and
assisting in feature development.

[codeowners]: https://github.com/vmware-tanzu/secrets-manager/blob/main/CODEOWNERS "VMware Secrets Manager CODEOWNERS"

<p class="github-button">
    <a href="https://github.com/vmware-tanzu/secrets-manager/blob/main/docs/_pages/0003-maintainers.md">
        Suggest edits ✏️
    </a>
</p>